[package]
edition = '2021'
name = "download-queue"
version = "0.2.1"
authors = ["J/A <archer884@gmail.com>"]

[dependencies]
atty = "0.2.14"
chrono = "0.4.19"
clap = { git = "https://github.com/clap-rs/clap" }
dirs = "4.0.0"
hashbrown = "0.11.2"
owo-colors = "3.0.1"
rand = "0.8.4"
stopwatch = "0.0.7"
url = "2.2.2"
